--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -91,7 +91,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOR">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingOR">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -101,7 +101,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingCCU">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance Reports</a></li>
 
                                 </ul>
                             </li>
@@ -112,7 +112,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingOutPatient">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance Reports</a></li>
 
                                 </ul>
                             </li>
@@ -126,7 +126,7 @@
                         <ul class="sub">
                             <li class="active"><a href="/pre-installationform">Add Pre-installation Report</a></li>
                             <li><a href="/showDailyInspectionForm">Add Daily Inspection Report</a></li>
-                            <li><a href="/showInventoryListingForm">Add Inventory Listing Report</a></li>
+                            <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance Report</a></li>
 
                         </ul>
                     </li>
@@ -150,14 +150,13 @@
                             <div class="form">
                                 <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/pre-installationform">
                                     <div class="form-group">
-                                        <label  class="control-label col-lg-2">Department's Name</label>
+                                        <label class="control-label col-lg-2">Department's Name</label>
                                         <div class="col-lg-10">
                                             <select class="form-control" id="department" name="department" required>
                                                 <option value="OR">OR</option>
                                                 <option value="CCU">CCU</option>
                                                 <option value="OutPatient">Out Patient</option>
                                               </select>
-                                            <!-- <input class="form-control"  name="department" type="text" required /> -->
                                         </div>
                                     </div>
                                     <div class="form-group">
