--- a/views/home/CCUPre_installation.handlebars
+++ b/views/home/CCUPre_installation.handlebars
@@ -90,7 +90,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOR">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingOR">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -100,7 +100,7 @@
                                 <ul class="sub">
                                     <li class="active"><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingCCU">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance Reports</a></li>
 
                                 </ul>
                             </li>
@@ -111,7 +111,7 @@
                                 <ul class="sub">
                                     <li ><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingOutPatient">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance Reports</a></li>
 
                                 </ul>
                             </li>
@@ -125,7 +125,7 @@
                         <ul class="sub">
                             <li><a href="/pre-installationform">Add Pre-installation Report</a></li>
                             <li><a href="/showDailyInspectionForm">Add Daily Inspection Report</a></li>
-                            <li><a href="/showInventoryListingForm">Add Inventory Listing Report</a></li>
+                            <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance Report</a></li>
 
                         </ul>
                     </li>
