--- a/views/management.html
+++ b/views/management.html
@@ -88,7 +88,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOR">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingOR">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -98,7 +98,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingCCU">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance Reports</a></li>
 
                                 </ul>
                             </li>
@@ -109,7 +109,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
-                                    <li><a href="/showInventoryListingOutPatient">Inventory Listing Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance Reports</a></li>
 
                                 </ul>
                             </li>
@@ -123,7 +123,7 @@
                         <ul class="sub">
                             <li><a href="/pre-installationform">Add Pre-installation Report</a></li>
                             <li><a href="/showDailyInspectionForm">Add Daily Inspection Report</a></li>
-                            <li><a href="/showInventoryListingForm">Add Inventory Listing Report</a></li>
+                            <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance Report</a></li>
 
                         </ul>
                     </li>
@@ -196,10 +196,10 @@
                                     <script>
                                         var doughnutData = [{
                                             value: 70,
-                                            color:"#FF6B6B"
+                                            color: "#FF6B6B"
                                         }, {
                                             value: 30,
-                                            color:"#fdfdfd"
+                                            color: "#fdfdfd"
                                         }];
                                         var myDoughnut = new Chart(document.getElementById("serverstatus01").getContext("2d")).Doughnut(doughnutData);
                                     </script>
@@ -240,10 +240,10 @@
                                     <script>
                                         var doughnutData = [{
                                             value: 60,
-                                            color:"#2b2b2b"
+                                            color: "#2b2b2b"
                                         }, {
                                             value: 40,
-                                            color:"#fffffd"
+                                            color: "#fffffd"
                                         }];
                                         var myDoughnut = new Chart(document.getElementById("serverstatus03").getContext("2d")).Doughnut(doughnutData);
                                     </script>
@@ -267,10 +267,10 @@
                             <script>
                                 var doughnutData = [{
                                     value: 70,
-                                    color:"#4ECDC4"
+                                    color: "#4ECDC4"
                                 }, {
                                     value: 30,
-                                    color:"#fdfdfd"
+                                    color: "#fdfdfd"
                                 }];
                                 var myDoughnut = new Chart(document.getElementById("newchart").getContext("2d")).Doughnut(doughnutData);
                             </script>
@@ -330,7 +330,7 @@
         $(document).ready(function() {
             $("#date-popover").popover({
                 html: true,
-                trigger:"manual"
+                trigger: "manual"
             });
             $("#date-popover").hide();
             $("#date-popover").click(function(e) {
@@ -345,16 +345,16 @@
                     return myNavFunction(this.id);
                 },
                 ajax: {
-                    url:"show_data.php?action=1",
+                    url: "show_data.php?action=1",
                     modal: true
                 },
                 legend: [{
-                    type:"text",
-                    label:"Special event",
-                    badge:"00"
+                    type: "text",
+                    label: "Special event",
+                    badge: "00"
                 }, {
-                    type:"block",
-                    label:"Regular event",
+                    type: "block",
+                    label: "Regular event",
                 }]
             });
         });
