--- a/views/add_preventive.html
+++ b/views/add_preventive.html
@@ -148,7 +148,7 @@
                     <div class="col-lg-12">
                         <div class="form-panel">
                             <div class="form">
-                                <form class="cmxform form-horizontal style-form" id="signupForm" method="get" action="">
+                                <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/getPreventiveMaintainanceData">
                                     <div class="form-group">
                                         <label class="control-label col-lg-2">Department's Name</label>
                                         <div class="col-lg-10">
@@ -196,13 +196,13 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="date" class="control-label col-lg-2">Schedule Date</label>
+                                        <label for="date" class="control-label col-lg-2">Date</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" id="date" name="date" value="01-01-2014" size="16" class="form-control" required>
+                                                <input type="text" readonly="" id="date" name="date" size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
-                            <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
-                            </span>
+                                                <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
+                                                </span>
                                             </div>
                                             <span class="help-block">Select date</span>
                                         </div>
@@ -210,7 +210,7 @@
                                     <div class="form-group">
                                         <label for="freq" class="control-label col-lg-2">Frequancy of Maintainance (Per Year)</label>
                                         <div class="col-lg-10">
-                                            <input class="form-control" id="freq" name="freq" type="number" required />
+                                            <input class="form-control" id="freq" name="freq" type="text" required />
                                         </div>
                                     </div>
 
