--- a/views/add_preventive.html
+++ b/views/add_preventive.html
@@ -214,12 +214,12 @@
                                         </div>
                                     </div>
 
-                                    <div class="form-group">
+                                    <!-- <div class="form-group">
                                         <label for="processes" class="control-label col-lg-2">Processes</label>
                                         <div class="col-lg-10">
                                             <textarea class="form-control" name="processes" id="processes" rows="5" data-rule="required" required></textarea>
                                         </div>
-                                    </div>
+                                    </div> -->
 
                                     <!-- <div class="form-group">
                                         <label for="days" class="control-label col-lg-2">Days of Maintainance</label>
